# ZoteroOfMine

./: .gitignore  .npmrc  README.md  chatting.md  package-lock.json  package.json  pnpm-workspace.yaml  tsconfig.json  update-template.json  update.json
.github/workflows/: build.yml  ci.yml  release.yml
addon/: bootstrap.js  manifest.json  prefs.js
addon/chrome/content/: preferences.xhtml
addon/locale/en-US/: addon.ftl  preferences.ftl
addon/locale/zh-CN/: addon.ftl  preferences.ftl
cli/: .gitignore  Makefile  README.md  entrypoint.py  entrypoint_mcp.py  pyproject.toml
cli/src/zotero_cli/: __init__.py  commands.py  config.py  database.py  main.py  mcp_server.py  models.py
cli/tests/: __init__.py  conftest.py  test_commands.py  test_config.py  test_database.py
docs/: clipboard-context-protocol.md  no-chat-ui-analysis.md  tech-stack-electron.md  tech-stack-proposal.md  tech-stack-tauri.md  zotero-cli-technical-roadmap.md
scripts/: build.mjs  bundle.mjs  reload.mjs
skills/ccp-context-protocol/: SKILL.md
skills/ccp-context-protocol/agents/: openai.yaml
skills/ccp-context-protocol/references/: ccp-zcli-integration.md
skills/zcli-tool-calling/: SKILL.md
skills/zcli-tool-calling/agents/: openai.yaml
src/: addon.ts  hooks.ts
src/chatui/: .gitignore  .npmrc  electron-builder.yml  package.json
src/modules/: ccpProducer.ts  examples.ts  historyPreferenceScript.ts  historyPreferences.ts  historyStore.ts  readingHistory.ts  vibeResearch.ts
src/utils/: mockHistory.ts  zdb.ts  ztoolkit.ts
typings/: global.d.ts  prefs.d.ts
(+5 files in other folders)
